log
Thu 25 Apr 2024 10:51:40 PM UTC: 
 tests:  0|6
total_score: 0/70
71db5ab
Thu 25 Apr 2024 11:08:09 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|5
total_score: 20/70
e84059e
Thu 25 Apr 2024 11:20:47 PM UTC: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  5|4
total_score: 30/70
c5ed58b
Thu 25 Apr 2024 11:21:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:81:20: error: expected ‘;’ before ‘}’ token
   81 |   free(buckets_old)
      |                    ^
      |                    ;
   82 | }
      | ~                   
Compilation failed
a527ab5
Thu 25 Apr 2024 11:21:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
a4fcc8e
